--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,11 @@
 html,
 body,
 .wrapper {
+  background-image: url(./assets/img/arnold.jpg);
+  /* background-repeat: repeat-x; */
+  background-attachment: scroll;
   height: 100%;
+  width: 100%
 }
 
 body {
@@ -17,8 +21,8 @@ body {
 }
 
 nav {
-  background-color: #5793fd;
-  color: #ffffff;
+  background-color: orange;
+  color: black;
   height: 80px;
   padding: 10px;
   line-height: 3;
@@ -42,6 +46,7 @@ header {
 
 header h1 {
   transform: skewX(-2deg);
+  color: white;
 }
 
 select {
@@ -59,6 +64,15 @@ select {
   background-repeat: no-repeat, repeat;
   background-position: right 0.7em top 50%, 0 0;
   background-size: 0.65em auto, 100%;
+}
+.chartjs-render-monitor {
+  animation: chartjs-render-animation 1ms;
+  background: white;
+}
+
+.text-center {
+  text-align: center!important;
+  color: white;
 }
 
 select::-ms-expand {
@@ -96,7 +110,7 @@ input {
 }
 
 .wrapper {
-  background-color: #f2f8ff;
+  background-color: black;
   padding-bottom: 100px;
 }
 
@@ -411,6 +425,11 @@ form > button {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  background: gray
+}
+
+.ui.positive.button {
+  background-color: orange
 }
 
 .buttons .ui.button:nth-child(2) {
